--- a/app/src/main/res/navigation/home_nav.xml
+++ b/app/src/main/res/navigation/home_nav.xml
@@ -8,6 +8,6 @@
     <fragment
         android:id="@+id/home_fragment"
         tools:layout="@layout/home_fragment"
-        android:name="com.murad.faylasoof.home.home_fragment"
+        android:name="com.murad.faylasoof.home.HomeFragment"
         android:label="home_fragment" />
 </navigation>
